#   2log.io
#   Copyright (C) 2021 - 2log.io | mail@2log.io,  sascha@2log.io
#
#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU Affero General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.
#
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU Affero General Public License for more details.
#
#   You should have received a copy of the GNU Affero General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.

if(NOT IDF_TARGET STREQUAL esp8266)

idf_component_register(
	SRCS			"WiFi.h" "WiFi.cpp" 
				"WiFiEventHandler.h" "WiFiEventHandler.cpp"
				"WiFiUtils.h" "WiFiUtils.cpp"
				"WiFiManagerEventHandler.h" "WiFiManagerEventHandler.cpp"
				"WiFiManager.h" "WiFiManager.cpp"
	INCLUDE_DIRS	"."
	REQUIRES idfix-core esp_netif esp_wifi idfix-protocols lwip  json esp_http_client
)

component_compile_options(-std=gnu++17)
#component_compile_options(-std=gnu++17)

else()

idf_component_register(
	SRCS			"WiFi.h" "WiFi.cpp" 
				"WiFiEventHandler.h" "WiFiEventHandler.cpp"
				"WiFiUtils.h" "WiFiUtils.cpp"
				"WiFiManagerEventHandler.h" "WiFiManagerEventHandler.cpp"
				"WiFiManager.h" "WiFiManager.cpp"
        INCLUDE_DIRS	"."
	REQUIRES idfix-core idfix-protocols lwip  json esp_http_client
)

endif()
